--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
 	"require": {
 		"guzzlehttp/guzzle": "5.3.*",
 		"filp/whoops": "1.1.*",
-		"aura/router": "2.2.*"
+		"aura/router": "2.2.*",
+		"aviat4ion/query": "2.0.*"
 	}
 }
