Update information on anime collection, and remove sqlite file, which can be created by a database migration

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
 		"guzzlehttp/guzzle": "5.3.*",
 		"filp/whoops": "1.1.*",
 		"aura/router": "2.2.*",
-		"aviat4ion/query": "2.0.*"
+		"aviat4ion/query": "2.0.*",
+		"robmorgan/phinx": "*"
 	}
 }
