--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,11 @@ php:
   - 7
   - hhvm
   - nightly
+
+script:
+  - mkdir -p build/logs
+  - phpunit --coverage-clover=coverage.clover
+
+after_script:
+    - wget https://scrutinizer-ci.com/ocular.phar
+    - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
