--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ php:
 
 script:
   - mkdir -p build/logs
-  - phpunit --coverage-clover=coverage.clover
+  - phpunit -c build
 
 after_script:
     - wget https://scrutinizer-ci.com/ocular.phar
-    - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+    - php ocular.phar code-coverage:upload --format=php-clover build/logs/coverage.clover
