--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
 		"danielstjules/stringy": "~2.1",
 		"filp/whoops": "dev-php7#fe32a402b086b21360e82013e8a0355575c7c6f4",
 		"guzzlehttp/guzzle": "6.*",
+		"monolog/monolog": "1.*",
+		"psr/log": "~1.0",
 		"robmorgan/phinx": "0.4.*",
 		"szymach/c-pchart": "1.*"
 	}
