--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,7 @@ script:
 after_script:
     - wget https://scrutinizer-ci.com/ocular.phar
     - php ocular.phar code-coverage:upload --format=php-clover build/logs/coverage.clover
+
+matrix:
+  allow_failures:
+    - php: nightly
