Add basic htaccess file for apache

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,22 @@
 .codelite
+.phing_targets
+.sonar/
 *.phprj
 *.workspace
 vendor
-app/cache/*
-app/logs/*
-public/js/cache/*
+**/cache/**
+**/logs/**
+**/coverage/**
+**/docs/**
 public/images/*
-public/cache/*
 composer.lock
 *.sqlite
 *.db
 *.sqlite3
 docs/*
-coverage/*
 tests/test_data/sessions/*
-build/coverage/*
-build/logs/*
-build/pdepend/*
-build/phpdox/*
 cache.properties
-tests/test_data/cache/*
+build/**
+!build/*.txt
+!build/*.xml
+!build/*.php
