--- a/composer.json
+++ b/composer.json
@@ -5,18 +5,19 @@
 	"require": {
 		"abeautifulsite/simpleimage": "2.5.*",
 		"aura/html": "2.*",
-		"aura/router": "2.2.*",
+		"aura/router": "3.*",
 		"aura/session": "2.*",
-		"aura/web": "2.*",
 		"aviat4ion/query": "2.5.*",
 		"container-interop/container-interop": "1.*",
 		"danielstjules/stringy": "~2.1",
 		"filp/whoops": "2.0.*",
 		"guzzlehttp/guzzle": "6.*",
 		"monolog/monolog": "1.*",
+		"psr/http-message": "~1.0",
 		"psr/log": "~1.0",
 		"robmorgan/phinx": "0.4.*",
-		"yosymfony/toml": "0.3.*"
+		"yosymfony/toml": "0.3.*",
+		"zendframework/zend-diactoros": "1.3.*"
 	},
 	"require-dev": {
 		"codeclimate/php-test-reporter": "dev-master"
