Add Redis Cache driver

--- a/app/config/config.toml.example
+++ b/app/config/config.toml.example
@@ -14,7 +14,7 @@ show_anime_collection = true
 # do you wish to show the manga collection?
 show_manga_collection = false
 
-# cache driver for api calls (SQLDriver, RedisDriver, MemcacheDriver)
+# cache driver for api calls (SQLDriver, RedisDriver)
 cache_driver = SQLDriver
 
 # path to public directory on the server
