--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,11 @@ php:
   - hhvm
   - nightly
 
+
+before_script:
+  - pecl install redis
+  - phpenv config-add .travis.ini
+
 script:
   - mkdir -p build/logs
   - phpunit -c build
