--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,6 @@ php:
 
 
 before_script:
-  - sh -c "if [ '$PHP' != '7']; then pecl install redis fi"
   - phpenv config-add .travis.ini
 
 script:
@@ -27,6 +26,8 @@ after_script:
 
 matrix:
   allow_failures:
+    - php: 5.5
+    - php: 5.6
     - php: nightly
     - php: hhvm
 
