--- a/app/config/config.toml.example
+++ b/app/config/config.toml.example
@@ -14,8 +14,8 @@ show_anime_collection = true
 # do you wish to show the manga collection?
 show_manga_collection = false
 
-# cache driver for api calls (SQLDriver, RedisDriver)
-cache_driver = SQLDriver
+# cache driver for api calls (NullDriver, SQLDriver, RedisDriver)
+cache_driver = NullDriver
 
 # path to public directory on the server
 asset_dir = "/../../public"
