--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
 		"psr/log": "~1.0",
 		"robmorgan/phinx": "0.4.*",
 		"yosymfony/toml": "0.3.*",
-		"zendframework/zend-diactoros": "1.3.*"
+		"zendframework/zend-diactoros": "1.3.*",
+		"maximebf/consolekit": "^1.0"
 	},
 	"require-dev": {
 		"codeclimate/php-test-reporter": "dev-master"
