--- a/app/config/config.toml.example
+++ b/app/config/config.toml.example
@@ -15,7 +15,7 @@ show_anime_collection = true
 show_manga_collection = false
 
 # cache driver for api calls (NullDriver, SQLDriver, RedisDriver)
-cache_driver = NullDriver
+cache_driver = "NullDriver"
 
 # path to public directory on the server
 asset_dir = "/../../public"
