Gitlab CI take two

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,16 @@
 before_script:
     # Install dependencies
     - bash build/docker_install.sh > /dev/null
+    # Install composer dependencies
+    - curl -sS https://getcomposer.org/installer | php
+    - php composer.phar install
+
+# Composer stores all downloaded packages in the vendor/ directory.
+# Do not use the following if the vendor/ directory is commited to
+# your git repository.
+cache:
+  paths:
+  - vendor/
 
 services:
     - redis:latest
