Update Redis cache driver to use PHP-only library, removing the dependence on an extension:

--- a/app/config/redis.toml.example
+++ b/app/config/redis.toml.example
@@ -3,6 +3,7 @@
 ################################################################################
 
 # Host or socket to connect to
+# Socket must be prefixed with 'unix:'
 host = "127.0.0.1"
 
 # Connection port
