--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
 		"filp/whoops": "2.0.*",
 		"guzzlehttp/guzzle": "6.*",
 		"monolog/monolog": "1.*",
+		"predis/predis": "1.1.*",
 		"psr/http-message": "~1.0",
 		"psr/log": "~1.0",
 		"robmorgan/phinx": "0.4.*",
