Move cache class to IOn namespace, use safer json for serialization in cache drivers

--- a/app/config/database.toml.example
+++ b/app/config/database.toml.example
@@ -10,4 +10,14 @@ pass = ""
 port = ""
 name = "default"
 database = ""
-file = "/../../anime_collection.sqlite"
+file = "anime_collection.sqlite"
+
+[cache]
+type = "sqlite"
+host = ""
+user = ""
+pass = ""
+port = ""
+name = "default"
+database = ""
+file = "anime_collection.sqlite"
