--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,18 @@
 		"predis/predis": "1.1.*",
 		"psr/http-message": "~1.0",
 		"psr/log": "~1.0",
-		"robmorgan/phinx": "0.4.*",
 		"yosymfony/toml": "0.3.*",
 		"zendframework/zend-diactoros": "1.3.*",
 		"maximebf/consolekit": "^1.0"
 	},
 	"require-dev": {
-		"codeclimate/php-test-reporter": "dev-master"
+		"codeclimate/php-test-reporter": "dev-master",
+		"pdepend/pdepend": "^2.2",
+		"sebastian/phpcpd": "^2.0",
+		"theseer/phpdox": "0.8.1.1",
+		"phploc/phploc": "^3.0",
+		"phpmd/phpmd": "^2.4",
+		"phpunit/phpunit": "^5.4",
+		"robmorgan/phinx": "^0.6.4"
 	}
 }
