--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,3 @@
-before_script:
-    # Install dependencies
-    - bash build/docker_install.sh > /dev/null
-    # Install composer dependencies
-    - curl -sS https://getcomposer.org/installer | php
-    - php composer.phar install --no-dev
-
 # Composer stores all downloaded packages in the vendor/ directory.
 # Do not use the following if the vendor/ directory is commited to
 # your git repository.
@@ -16,11 +9,29 @@ services:
     - redis:latest
 
 test:5.6:
+    before_script:
+      - bash build/docker_install.sh > /dev/null
+      - curl -sS https://getcomposer.org/installer | php
+      - php composer.phar install --no-dev
     image: php:5.6
     script:
       - phpunit -c build
 
 test:7:
+    before_script:
+      - bash build/docker_install.sh > /dev/null
+      - curl -sS https://getcomposer.org/installer | php
+      - php composer.phar install --no-dev
     image: php:7
     script:
       - phpunit -c build
+
+test:hhvm:
+    before_script:
+      - curl -sS https://getcomposer.org/installer | hhvm
+      - hhvm composer.phar install --no-dev
+      - curl -Lo /usr/local/bin/phpunit https://phar.phpunit.de/phpunit.phar
+      - chmod +x /usr/local/bin/phpunit
+    image: diegomarangoni/hhvm:cli
+    script:
+      - hhvm `which phpunit` -c build
