Make sure to use the version of phpunit I actually install

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,13 +10,9 @@ php:
   - hhvm
   - nightly
 
-
-before_script:
-  - composer global require "phpunit/phpunit:5.*"
-
 script:
   - mkdir -p build/logs
-  - phpunit -c build
+  - vendor/bin/phpunit -c build
 
 services:
   - redis
