--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,6 @@
 		"consolidation/robo": "~1.0@RC",
 		"henrikbjorn/lurker": "^1.1.0",
 		"symfony/var-dumper": "^3.1",
-		"squizlabs/php_codesniffer": "^3.0.0@alpha"
+		"squizlabs/php_codesniffer": "^3.0.0@beta"
 	}
 }
