--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,15 @@ test:7:
     image: php:7
     script:
       - phpunit -c build
+      
+test:7.1:
+    before_script:
+      - bash build/docker_install.sh > /dev/null
+      - curl -sS https://getcomposer.org/installer | php
+      - php composer.phar install --no-dev
+    image: php:7.1
+    script:
+      - phpunit -c build
 
 test:hhvm:
     before_script:
