--- a/composer.json
+++ b/composer.json
@@ -41,5 +41,8 @@
 		"henrikbjorn/lurker": "^1.1.0",
 		"symfony/var-dumper": "^3.1",
 		"squizlabs/php_codesniffer": "^3.0.0@beta"
+	},
+	"scripts": {
+
 	}
 }
