--- a/public/package.json
+++ b/public/package.json
@@ -1,11 +1,17 @@
 {
-  "scripts": {
-    "watch": "npm-run-all --parallel watch:base watch:marx",
-    "watch:base": "myth -w css/base.myth.css css/base.css",
-    "watch:marx": "myth -w css/marx.myth.css css/marx.css"
-  },
-  "devDependencies": {
-    "myth": "^1.5.0",
-    "npm-run-all": "^1.7.0"
-  }
+	"scripts": {
+		"build": "npm-run-all --parallel build:base build:marx",
+		"build:base": "postcss --use autoprefixer --autoprefixer.browsers \"> 5%\" -o css/base.css css/base.myth.css",
+		"build:marx": "postcss --use autoprefixer --autoprefixer.browsers \"> 5%\" -o css/marx.css css/marx.myth.css",
+		"watch": "npm-run-all --parallel watch:base watch:marx",
+		"watch:base": "postcss --use autoprefixer --autoprefixer.browsers \"> 5%\" -w -o css/base.css css/base.myth.css",
+		"watch:marx": "postcss --use autoprefixer --autoprefixer.browsers \"> 5%\" -w -o css/marx.css css/marx.myth.css"
+	},
+	"devDependencies": {
+		"autoprefixer": "^6.6.1",
+		"npm-run-all": "^4.0.0",
+		"postcss-cachify": "^1.3.1",
+		"postcss-cli": "^2.6.0",
+		"postcss-cssnext": "^2.9.0"
+	}
 }
