--- a/public/package.json
+++ b/public/package.json
@@ -1,11 +1,11 @@
 {
 	"scripts": {
 		"build": "npm-run-all --parallel build:base build:marx",
-		"build:base": "postcss --use autoprefixer --autoprefixer.browsers \"> 5%\" -o css/base.css css/base.myth.css",
-		"build:marx": "postcss --use autoprefixer --autoprefixer.browsers \"> 5%\" -o css/marx.css css/marx.myth.css",
+		"build:base": "postcss --autoprefixer.browsers \"> 5%\" --use postcss-cssnext -o css/base.css css/base.myth.css",
+		"build:marx": "postcss --autoprefixer.browsers \"> 5%\" --use postcss-cssnext -o css/marx.css css/marx.myth.css",
 		"watch": "npm-run-all --parallel watch:base watch:marx",
-		"watch:base": "postcss --use autoprefixer --autoprefixer.browsers \"> 5%\" -w -o css/base.css css/base.myth.css",
-		"watch:marx": "postcss --use autoprefixer --autoprefixer.browsers \"> 5%\" -w -o css/marx.css css/marx.myth.css"
+		"watch:base": "postcss --autoprefixer.browsers \"> 5%\" --use postcss-cssnext -w -o css/base.css css/base.myth.css",
+		"watch:marx": "postcss --autoprefixer.browsers \"> 5%\" --use postcss-cssnext -w -o css/marx.css css/marx.myth.css"
 	},
 	"devDependencies": {
 		"autoprefixer": "^6.6.1",
