--- a/app/config/config.toml.example
+++ b/app/config/config.toml.example
@@ -3,7 +3,7 @@
 ################################################################################
 
 # Username for anime and manga lists
-hummingbird_username = "timw4mail"
+kitsu_username = "timw4mail"
 
 # Whose list is it?
 whose_list = "Tim"
@@ -13,9 +13,6 @@ show_anime_collection = true
 
 # do you wish to show the manga collection?
 show_manga_collection = false
-
-# cache driver for api calls (NullDriver, SQLDriver, RedisDriver)
-cache_driver = "NullDriver"
 
 # path to public directory on the server
 asset_dir = "/../../public"
