--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
 		"psr/log": "~1.0",
 		"yosymfony/toml": "0.3.*",
 		"zendframework/zend-diactoros": "1.3.*",
-		"maximebf/consolekit": "^1.0"
+		"maximebf/consolekit": "^1.0",
+		"amphp/artax": "^2.0"
 	},
 	"require-dev": {
 		"pdepend/pdepend": "^2.2",
