--- a/composer.json
+++ b/composer.json
@@ -14,25 +14,25 @@
 		}
 	},
 	"require": {
-		"aura/html": "2.*",
-		"aura/router": "3.*",
-		"aura/session": "2.*",
+		"aura/html": "^2.0",
+		"aura/router": "^3.0",
+		"aura/session": "^2.0",
 		"aviat/banker": "^1.0.0",
 		"aviat/ion": "1.0.*",
-		"filp/whoops": "2.0.*",
-		"guzzlehttp/guzzle": "6.*",
-		"monolog/monolog": "1.*",
+		"filp/whoops": "^2.1.5",
+		"guzzlehttp/guzzle": "^6.0",
+		"monolog/monolog": "^1.0",
 		"psr/http-message": "~1.0",
 		"psr/log": "~1.0",
-		"yosymfony/toml": "0.3.*",
-		"zendframework/zend-diactoros": "1.3.*",
+		"yosymfony/toml": "^0.3",
+		"zendframework/zend-diactoros": "^1.3",
 		"maximebf/consolekit": "^1.0",
 		"amphp/artax": "^2.0"
 	},
 	"require-dev": {
 		"pdepend/pdepend": "^2.2",
-		"sebastian/phpcpd": "^2.0",
-		"theseer/phpdox": "0.8.1.1",
+		"sebastian/phpcpd": "^3.0",
+		"theseer/phpdox": "^0.9.0",
 		"phploc/phploc": "^3.0",
 		"phpmd/phpmd": "^2.4",
 		"phpunit/phpunit": "^5.7",
