Attempt to fix hhvm tests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ test:hhvm:
       - /usr/local/bin/composer self-update
       - curl -Lo /usr/local/bin/phpunit https://phar.phpunit.de/phpunit.phar
       - chmod +x /usr/local/bin/phpunit
-      - composer install --no-dev
+      - composer install --no-dev --ignore-platform-reqs
     image: 51systems/docker-gitlab-ci-runner-hhvm
     script:
       - hhvm -d hhvm.php7.all=true /usr/local/bin/phpunit -c build --coverage-text --colors=never
