Maybe stages will help?

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,39 +1,43 @@
 # Composer stores all downloaded packages in the vendor/ directory.
 # Do not use the following if the vendor/ directory is commited to
 # your git repository.
-cache:
-  paths:
-  - vendor/
 
 services:
     - redis:latest
 
-test:7:
-    before_script:
-      - bash build/docker_install.sh > /dev/null
-      - curl -sS https://getcomposer.org/installer | php
-      - php composer.phar install --no-dev
-    image: php:7-alpine
-    script:
-      - phpunit -c build --coverage-text --colors=never
-      
-test:7.1:
-    before_script:
-      - bash build/docker_install.sh > /dev/null
-      - curl -sS https://getcomposer.org/installer | php
-      - php composer.phar install --no-dev
-    image: php:7.1-alpine
-    script:
-      - phpunit -c build --coverage-text --colors=never
+stages:
+    - test
 
-test:hhvm:
-    allow_failure: true
-    before_script:
-      - /usr/local/bin/composer self-update
-      - curl -Lo /usr/local/bin/phpunit https://phar.phpunit.de/phpunit.phar
-      - chmod +x /usr/local/bin/phpunit
-      - composer install --no-dev --ignore-platform-reqs
-    #image: 51systems/docker-gitlab-ci-runner-hhvm
-    image: 2ndkauboy/gitlab-ci-runner-hhvm
-    script:
-      - hhvm -d hhvm.php7.all=true /usr/local/bin/phpunit -c build --coverage-text --colors=never
+test:
+    test:7:
+        stage: test
+        before_script:
+          - sh build/docker_install.sh > /dev/null
+          - curl -sS https://getcomposer.org/installer | php
+          - php composer.phar install --no-dev
+        image: php:7-alpine
+        script:
+          - phpunit -c build --coverage-text --colors=never
+
+    test:7.1:
+        stage: test
+        before_script:
+          - sh build/docker_install.sh > /dev/null
+          - curl -sS https://getcomposer.org/installer | php
+          - php composer.phar install --no-dev
+        image: php:7.1-alpine
+        script:
+          - phpunit -c build --coverage-text --colors=never
+
+    test:hhvm:
+        stage: test
+        allow_failure: true
+        before_script:
+          - /usr/local/bin/composer self-update
+          - curl -Lo /usr/local/bin/phpunit https://phar.phpunit.de/phpunit.phar
+          - chmod +x /usr/local/bin/phpunit
+          - composer install --no-dev --ignore-platform-reqs
+        #image: 51systems/docker-gitlab-ci-runner-hhvm
+        image: 2ndkauboy/gitlab-ci-runner-hhvm
+        script:
+          - hhvm -d hhvm.php7.all=true /usr/local/bin/phpunit -c build --coverage-text --colors=never
