Make sure to try to install the correct packages

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,15 +29,15 @@ test:7.1:
     script:
       - phpunit -c build --coverage-text --colors=never
 
-test:hhvm:
-    stage: test
-    allow_failure: true
-    before_script:
-      - /usr/local/bin/composer self-update
-      - curl -Lo /usr/local/bin/phpunit https://phar.phpunit.de/phpunit.phar
-      - chmod +x /usr/local/bin/phpunit
-      - composer install --no-dev --ignore-platform-reqs
-    #image: 51systems/docker-gitlab-ci-runner-hhvm
-    image: 2ndkauboy/gitlab-ci-runner-hhvm
-    script:
-      - hhvm -d hhvm.php7.all=true /usr/local/bin/phpunit -c build --coverage-text --colors=never
+#test:hhvm:
+#    stage: test
+#    allow_failure: true
+#    before_script:
+#      - /usr/local/bin/composer self-update
+#      - curl -Lo /usr/local/bin/phpunit https://phar.phpunit.de/phpunit.phar
+#      - chmod +x /usr/local/bin/phpunit
+#      - composer install --no-dev --ignore-platform-reqs
+#    #image: 51systems/docker-gitlab-ci-runner-hhvm
+#    image: 2ndkauboy/gitlab-ci-runner-hhvm
+#    script:
+#      - hhvm -d hhvm.php7.all=true /usr/local/bin/phpunit -c build --coverage-text --colors=never
