--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
 		"aura/router": "^3.0",
 		"aura/session": "^2.0",
 		"aviat/banker": "^1.0.0",
-		"aviat/ion": "1.0.*",
+		"aviat/ion": "dev-master",
 		"filp/whoops": "^2.1.5",
 		"monolog/monolog": "^1.0",
 		"psr/http-message": "~1.0",
@@ -42,12 +42,14 @@
 		"consolidation/robo": "~1.0",
 		"henrikbjorn/lurker": "^1.1.0",
 		"symfony/var-dumper": "^3.1",
-		"squizlabs/php_codesniffer": "^3.0.0@beta"
+		"squizlabs/php_codesniffer": "^3.0.0@beta",
+		"phpstan/phpstan": "^0.6.4"
 	},
 	"scripts": {
 		"build:css": "cd public && npm run build && cd ..",
 		"coverage": "vendor/bin/phpunit -c build",
 		"docs": "vendor/bin/phpdox",
+		"phpstan": "phpstan analyse src tests",
 		"watch:css": "cd public && npm run watch",
 		"test": "vendor/bin/phpunit"
 	}
