--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,14 +1,10 @@
-stages:
-    - test
-
-
 test:7:
     stage: test
     before_script:
       - sh build/docker_install.sh > /dev/null
       - apk add --no-cache php7-phpdbg
       - curl -sS https://getcomposer.org/installer | php
-      - php composer.phar install --no-dev --ignore-platform-reqs
+      - php composer.phar install --ignore-platform-reqs
     image: php:7-alpine
     script:
       - phpdbg -qrr -- ./vendor/bin/phpunit --coverage-text --colors=never
@@ -19,7 +15,7 @@ test:7.1:
       - sh build/docker_install.sh > /dev/null
       - apk add --no-cache php7.1-phpdbg
       - curl -sS https://getcomposer.org/installer | php
-      - php composer.phar install --no-dev --ignore-platform-reqs
+      - php composer.phar install --ignore-platform-reqs
     image: php:7.1-alpine
     script:
       - phpdbg -qrr -- ./vendor/bin/phpunit --coverage-text --colors=never
